--- a/Cervan_Renz_MirandaSousa_19-660-018.Rmd
+++ b/Cervan_Renz_MirandaSousa_19-660-018.Rmd
@@ -1265,12 +1265,10 @@ print(svm_model)
 # Predictions on training data
 pred_train <- predict(svm_model, train_data)
 conf_matrix_train <- confusionMatrix(pred_train, train_data$premium_category)
-print("Confusion metrics for TEST_DATA")
+print("Confusion metrics for TRAIN_DATA")
 print(conf_matrix_train)
 
-mcc_train <- mccr(pred_train, train_data$premium_category)
-print(paste("MCC for Train Data:", round(mcc_train, 4))) # something seems off here... manual calculation leads to roughly 0.58 whcih incidates a moderate positive correlation between predicted and actual classifications.
-# manual calculation
+# manual calculation of MCC
 
 conf_table <- as.table(conf_matrix_train)
 TP <- conf_table[2, 2]  # True Positive
@@ -1292,22 +1290,21 @@ print("Confusion metrics for TEST_DATA")
 print(conf_matrix)
 
 # Usage of MCC due to imbalanced dataset
-mcc_test <- mccr(pred_test, test_data$premium_category)
-print(paste("MCC for Test Data:", round(mcc_test, 4))) # something seems off here... manual calculation leads to roughyl 0.7 which is considered strong correlation between predicted and actual classifications.
+# Predictions and confusion matrix on test data
+pred_test <- predict(svm_model, newdata = test_data)
+conf_matrix_test <- confusionMatrix(pred_test, test_data$premium_category)
+print("Confusion metrics for TEST_DATA")
+print(conf_matrix_test)
 
-# manual calculation
+# Manual MCC Calculation for Test Data
+conf_table_test <- as.table(conf_matrix_test$table)
+TP_test <- conf_table_test[2, 2]  # True Positive
+TN_test <- conf_table_test[1, 1]  # True Negative
+FP_test <- conf_table_test[1, 2]  # False Positive
+FN_test <- conf_table_test[2, 1]  # False Negative
+mcc_test_manual <- (TP_test * TN_test - FP_test * FN_test) / sqrt((TP_test + FP_test) * (TP_test + FN_test) * (TN_test + FP_test) * (TN_test + FN_test))
 
-conf_table <- as.table(conf_matrix)
-TP <- conf_table[2, 2]  # True Positive
-TN <- conf_table[1, 1]  # True Negative
-FP <- conf_table[1, 2]  # False Positive
-FN <- conf_table[2, 1]  # False Negative
-
-# Calculate MCC
-mcc <- (TP * TN - FP * FN) / sqrt((TP + FP) * (TP + FN) * (TN + FP) * (TN + FN))
-
-# Print MCC
-print(paste("MCC manually calculated:", round(mcc, 4)))
+print(paste("MCC manually calculated for Test Data:", round(mcc_test_manual, 4)))
 
 ```
 
@@ -1315,18 +1312,28 @@ This analysis explores the performance of a multiclass classification task using
 
 Model training was carried out with 10-fold cross-validation repeated three times, leveraging parallel processing to speed up the evaluation. A grid search was performed to find optimal values for the hyperparameters c (cost) and sigma, ensuring the model's robustness and generalizability.
 
-The evaluation showed that the "very_high" category had the highest sensitivity at 0.86, while the "low" category excelled in specificity at 0.96 and positive predictive value at 0.89. Nevertheless, as accuracy, sensitivity, specificity and other measurements might be useful for balanced data, a different approach is used for unbalanced data s such. Therefore, the MCC is used and has revealed for each class  strong performance overall
+
+
+The evaluation showed that the "very_high" category had the highest sensitivity at 0.73, while the "low" category excelled in specificity at 0.94 and positive predictive value at 0.81. Nevertheless, as accuracy, sensitivity, specificity and other measurements might be useful for balanced data, a different approach is used for unbalanced data as such. Therefore, the MCC was used and has revealed for each class  strong performance overall as it can be seen below with the confusion matrix and corresponding MCC values.
+
+| Prediction  | Low | Medium | High | Very High |
+|-------------|-----|--------|------|-----------|
+| **Low**     | 54  | 11     | 0    | 2         |
+| **Medium**  | 17  | 48     | 12   | 1         |
+| **High**    | 2   | 14     | 49   | 17        |
+| **Very High**| 2   | 2      | 14   | 55        |
+
 
 | Category   | MCC     |
 |------------|---------|
-| Low        | ~0.77  |
-| Medium     | ~0.67  |
-| High       | ~0.67  |
-| Very High  | ~0.81  |
+| Low        | ~0.69  |
+| Medium     | ~0.50  |
+| High       | ~0.49  |
+| Very High  | ~0.58  |
 |------------|---------|
-| Overall    | ~0.73  |
+| Overall    | ~0.57  |
 
-The code process incorporated parallelized cross-validation and grid search, facilitating comprehensive hyperparameter tuning. The findings highlighted an overall accuracy of 0.69 and a Kappa statistic of 0.58, with McNemar's test yielding a significant P-value below 0.05 and mcc-value of roughly 0.73, suggesting a noteworthy difference from random classification.
+The code process incorporated parallelized cross-validation and grid search, facilitating comprehensive hyperparameter tuning. The findings highlighted an overall accuracy of 0.69 and a Kappa statistic of 0.58, with McNemar's test yielding a significant P-value below 0.05 and mcc-value of roughly 0.57, suggesting a noteworthy difference from random classification.
 
 | Measurement   | Value     |
 |------------|---------|
