--- a/Cervan_Renz_MirandaSousa_19-660-018.Rmd
+++ b/Cervan_Renz_MirandaSousa_19-660-018.Rmd
@@ -586,20 +586,50 @@ hist(clean_dat_motor$CCM_TON_log, main = "Hist. of CCM_TON_log", xlab = "CCM_TON
 hist(clean_dat_motor$SEATS_NUM, main = "Hist. of SEATS_NUM", xlab = "SEATS_NUM", col = "skyblue", border = "black", breaks = 30, freq = TRUE)
 hist(clean_dat_motor$SEATS_NUM_log, main = "Hist. of SEATS_NUM_log", xlab = "SEATS_NUM_log", col = "skyblue", border = "black", breaks = 30, freq = TRUE)
 
-par(mfrow = c(1, 1))
-
+par(mfrow = c(2, 1))
 hist(clean_dat_motor$AGE_VEHICLE, main = "Hist. of AGE_VEHICLE", xlab = "AGE_VEHICLE", col = "skyblue", border = "black", breaks = 30, freq = TRUE)
 
 
-par(mfrow = c(1, 2))  # Setzt das Layout auf eine einzelne Grafik
+par(mfrow = c(1, 2))
+
 # Boxplots
 boxplot(PREMIUM ~ SEX, data = clean_dat_motor,
-        main = "Premium against sex",
+        main = "Premium against SEX",
         ylab = "Premium")
 
-boxplot(CLAIM_PAID_USD ~ SEX, data = clean_dat_motor,
-        main = "Claim paid (USD) against sex",
-        ylab = "Claim paid (USD)")
+boxplot(PREMIUM ~ INSR_TYPE, data = clean_dat_motor,
+        main = "Premium against INSR_TYPE",
+        ylab = "Premium")
+
+boxplot(PREMIUM ~ USAGE, data = clean_dat_motor,
+        main = "Premium against USAGE",
+        ylab = "Premium")
+
+boxplot(PREMIUM ~ TYPE_VEHICLE, data = clean_dat_motor,
+        main = "Premium against TYPE_VEHICLE",
+        ylab = "Premium")
+
+par(mfrow = c(1, 1))
+boxplot(PREMIUM ~ MAKE, data = clean_dat_motor,
+        main = "Premium against MAKE",
+        ylab = "Premium")
+
+
+ggplot(data = clean_dat_motor,
+mapping = aes(y = PREMIUM,
+x = CLAIM_PAID_USD_log)) +
+geom_point() +
+geom_smooth(method = "lm") +
+facet_wrap(. ~ MAKE)
+
+
+ggplot(data = clean_dat_motor,
+mapping = aes(y = PREMIUM,
+x = CLAIM_PAID_USD_log)) +
+geom_point() +
+geom_smooth()
+
+
 
 # Clear Workspace
 rm(list = setdiff(ls(), c("clean_dat_motor_origin", "clean_dat_motor")))
@@ -607,8 +637,9 @@ rm(list = setdiff(ls(), c("clean_dat_motor_origin", "clean_dat_motor")))
 
 ```
 
-The histograms show that the variables INSURED_VALUE, PREMIUM, CLAIM_PAID_USD and CCM_TON are right-skewed and require a log transformation. The transformed variables will be inserted in the later regression models instead of the original variables.
+The histograms show that the variables PREMIUM, INSURED_VALUE, CLAIM_PAID_USD, AMOUNT_CLAIMS_PAID, CCM_TON and SEATS_NUM are right-skewed and require a log transformation. The transformed variables will be inserted in the later regression models instead of the original variables.
 
+The boxplots reveal distinct differences in premium distributions across categories, such as higher premiums for "Legal Entity" compared to "Male" and "Female," and significant variations among vehicle types like "Motorcycle" and "Truck." These patterns suggest that the predictor variables have a substantial influence on premium amounts, warranting further formal analysis.
 
 # Models
 Once the pre-processing was completed and a good overview about the given data and domain knowledge what acquired, the team focused on defining models using several different methods shown in followed sub-sections.
@@ -616,7 +647,7 @@ Once the pre-processing was completed and a good overview about the given data a
 ## Linear model
 *Lead: Rafaella Miranda-Sousa Wasser*
 
-A linear model is adapted, whereby CLAIM_PAID_USD_log was not included, as the premium is incurred at the start of the contract and this would therefore not make technical sense. Instead, a bonus-malus system is taken into account by adding AMOUNT_CLAIMS_PAID_log.
+The aim of the following analysis is to identify the key factors influencing premium amounts. Since the data originates from an Ethiopian insurer, the objective is to assess whether the premium setting is reasonable. The choice of PREMIUM_log as the target variable is based on the strongly right-skewed distribution of the original variable PREMIUM, which could violate the assumptions of linear regression. In constructing the linear model, CLAIM_PAID_USD_log is excluded, as premiums are determined at the start of the contract, making its inclusion technically inappropriate. Instead, a bonus-malus system is incorporated by adding AMOUNT_CLAIMS_PAID_log, reflecting the cumulative claim history and aligning with premium adjustments based on risk exposure.
 
 ```{r linear_model, cache = TRUE}
 
